--- a/.github/workflows/build-apk-wadb.yml
+++ b/.github/workflows/build-apk-wadb.yml
@@ -5,7 +5,7 @@ on:
   workflow_call:
 
 env:
-  JDK_VERSION: '11'
+  JDK_VERSION: '17'                         # 升级到 JDK 17 以兼容新版 cmdline-tools
   JDK_DISTRIBUTION: 'temurin'
   ANDROID_COMPILE_SDK: '31'
   ANDROID_BUILD_TOOLS: '31.0.0'
@@ -66,11 +66,11 @@ jobs:
       - name: Build with gradle
         working-directory: ./wadb_source
         run: |
-          # 接受 Android SDK 许可证（忽略失败，因为后续 Gradle 会处理）
+          # 接受 Android SDK 许可证（JDK 17 后可正常运行）
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null || true
 
-          # 添加 Rikka Maven 仓库以解决依赖缺失
-          awk '/allprojects {/,/}/ { if ($0 ~ /repositories {/) { print; print "        maven { url \"https://repo.rikka.dev\" }"; next } }1' build.gradle > build.gradle.tmp && mv build.gradle.tmp build.gradle
+          # 添加正确的 Rikka Maven 仓库（原 repo.rikka.dev 已失效）
+          awk '/allprojects {/,/}/ { if ($0 ~ /repositories {/) { print; print "        maven { url \"https://maven.rikka.dev\" }"; next } }1' build.gradle > build.gradle.tmp && mv build.gradle.tmp build.gradle
 
           # 仅构建 arm64-v8a 架构
           sed -i "s/abiFilters .*/abiFilters 'arm64-v8a'/" app/build.gradle
