--- a/.github/workflows/build-apk-wadb.yml
+++ b/.github/workflows/build-apk-wadb.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Write keystore info
         working-directory: ./wadb_source
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.p12
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./app/keystore.p12
           echo "KEYSTORE_FILE=./keystore.p12" >> signing.properties
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> signing.properties
           echo "KEYSTORE_ALIAS=${{ secrets.KEY_ALIAS }}" >> signing.properties
@@ -96,7 +96,7 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          P12_KEYSTORE_PATH: "./wadb_source/keystore.p12"
+          P12_KEYSTORE_PATH: "./wadb_source/app/keystore.p12"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./dist/wadb-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-wadb"
